Bug 106315 - The witness + dxvk suffers flickering garbage
Summary: The witness + dxvk suffers flickering garbage
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/radeon (show other bugs)
Version: git
Hardware: Other Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-29 20:49 UTC by Grazvydas Ignotas
Modified: 2018-05-21 11:58 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
wine's d3d rendering (188.40 KB, image/jpeg)
2018-04-30 20:43 UTC, Grazvydas Ignotas
Details

Description Grazvydas Ignotas 2018-04-29 20:49:55 UTC
The witness + wine + dxvk suffers from flickering garbage. It's most visible with MSAA off, when it's on the problem is only visible in water reflections. The problem doesn't show up under Windows + dxvk, which suggests it's a driver issue (probably LLVM?)

Renderdoc capture with MSAA off:
https://drive.google.com/file/d/1MZ3GaxQaKgdJ-FZHRj7hnpmimv9bKodU/view?usp=sharing

Recorded using renderdoc nightly (2018_04_28) because dxvk requires VK_KHR_descriptor_update_template now.

GPU: POLARIS10 (RX 470)
LLVM: 7.0.0 r330470
Comment 1 Samuel Pitoiset 2018-04-30 08:11:37 UTC
Can you upload a screenshot of Windows+dxvk for comparison purposes, please?
Comment 2 Grazvydas Ignotas 2018-04-30 20:43:08 UTC
Created attachment 139237 [details]
wine's d3d rendering

I no longer have access to the Windows machine, but here's how wine without dxvk but with ATOC hack renders it, which AFAIK should be correct. This is not exact same frame as in the renderdoc capture though, because I had to rerun the game.

Note that if you run "renderdoccmd replay wine64-preloader_2018.04.29_23.02_frame50.rdc" you should get the same frame rendered repeatedly, but what happens is the garbage "animates" between frames, as if some uninitialized data is being picked from somewhere during rendering (same thing happens ingame).
Comment 3 vercammenthijs 2018-05-11 12:50:03 UTC
AMDVLK has the same artifacts while amdgpu-pro renders fine. I posted comparison screenshots in the dxvk github issue: https://github.com/doitsujin/dxvk/issues/10#issuecomment-388349740

World of Warcraft has similar artifacts on radv and also renders fine with amdgpu-pro: https://github.com/doitsujin/dxvk/issues/343
Comment 4 Samuel Pitoiset 2018-05-21 11:58:41 UTC
Fixed with https://cgit.freedesktop.org/mesa/mesa/commit/?id=73df16dcee79e2281c8d8a830dbbe6655359c82d

The patch should be available in next mesa 18.0.5/18.1.1.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.